--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -53,7 +53,7 @@ title: Koło Studentów Informatyki UJ
 
     <section id="dydaktyka" class="wrapper spotlight alt style3">
         <div class="inner">
-            <a href="#" class="image"><img src="/images/ucz-sie-z-ksi.jpg" alt=""/></a>
+            {% picture logo /images/ucz-sie-z-ksi.jpg --link /about/ --a class="image" %}
             <div class="content">
                 <h2 class="major">{% t 'section_didactics.title' %}</h2>
                 <p>{% t 'section_didactics.text' %}</p>
@@ -64,7 +64,7 @@ title: Koło Studentów Informatyki UJ
 
     <section id="serwerownia" class="wrapper spotlight style1">
         <div class="inner">
-            <a href="#" class="image"><img src="/images/serwerownia.jpg" alt=""/></a>
+            {% picture logo /images/serwerownia.jpg --link /projects/ --a class="image" %}
             <div class="content">
                 <h2 class="major">{% t 'section_server_room.title' %}</h2>
                 <p>{% t 'section_server_room.text' %}</p>
@@ -75,7 +75,7 @@ title: Koło Studentów Informatyki UJ
 
     <section id="projekty" class="wrapper spotlight alt style2">
         <div class="inner">
-            <a href="#" class="image"><img src="/images/octocat_girl.jpg" alt=""/></a>
+            {% picture logo /images/octocat_girl.jpg --link /projects/ --a class="image" %}
             <div class="content">
                 <h2 class="major">{% t 'section_projects.title' %}</h2>
                 <p>{% t 'section_projects.text' %}</p>
