--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -4,7 +4,7 @@ languages:
 - pl
 - en
 subset: frontpage
-title: Koło Studentów Informatyki UJ
+title: Home
 ---
 <!-- Banner -->
 <section id="banner">
@@ -31,7 +31,7 @@ title: Koło Studentów Informatyki UJ
 
     <section id="events" class="wrapper alt spotlight style1">
         <div class="inner">
-            {% picture logo images/base/icon-events.png --link /events/ --a class="image" %}
+            {% picture logo images/base/events.jpg --link /events/ --a class="image" %}
             <div class="content">
                 <h2 class="major">{% t 'section_events.title' %}</h2>
                 <p>{% t 'section_events.text' %} </p>
