--- a/jekyll/events.html
+++ b/jekyll/events.html
@@ -31,7 +31,7 @@ subset: events
             <article>
                 {% picture halfpage images/events/facebook.jpg --parent class="image" %}
                 <h3 class="major">Facebook</h3>
-                <p>Facebook & Machine Learning</p>
+                <p>Facebook &amp; Machine Learning</p>
             </article>
             <article>
                 {% picture halfpage images/events/microsoft.jpg --parent class="image" %}
@@ -41,7 +41,7 @@ subset: events
             <article>
                 {% picture halfpage images/events/ge.jpg --parent class="image" %}
                 <h3 class="major">General Electric</h3>
-                <p>Git & release management workshop</p>
+                <p>Git &amp; release management workshop</p>
             </article>
         </section>
     </div>
