--- a/jekyll/events/index.html
+++ b/jekyll/events/index.html
@@ -82,7 +82,16 @@ subset: events
         </div>
     </div>
 </section>
-<section class="wrapper alt spotlight style4">
+<section class="wrapper spotlight style1 alt">
+    <div class="inner">
+        {% picture logo images/events/bal.jpg --parent class="image alt" %}
+        <div class="content">
+            <h2 class="major">{% t 'social_events' %}</h2>
+            <p>{% t 'social_events_desc' %}</p>
+        </div>
+    </div>
+</section>
+<section class="wrapper spotlight style4">
     <div class="inner">
         {% picture logo images/events/icon-events.png --parent class="image alt" %}
         <div class="content">
