Zmiana kadencji i statutu

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -59,9 +59,9 @@ title: About KSI
             <div class="row">
                 <div class="col-3 col-12-medium"></div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/piekarczyk.jpg %}</span>
+                    <span class="image alt">{% picture halfpage images/about/wolek.jpg %}</span>
                     <div class="align-left">
-                        <h3>Adam Piekarczyk</h3>
+                        <h3>Dominik Wołek</h3>
                         <h5>{% t 'president' %}</h5>
                     </div>
                 </div>
@@ -75,34 +75,20 @@ title: About KSI
                     <h5>{% t 'vp' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/sabala.jpg %}</span>
-                    <h3>Wojciech Sabała</h3>
-                    <h5>{% t 'vp' %}</h5>
-                </div>
-            </div>
-            <hr/>
-            <div class="row">
-                <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/smykala.jpg %}</span>
-                    <h3>Szymon Smykała</h3>
+                    <span class="image alt">{% picture halfpage images/about/sereda.jpg %}</span>
+                    <h3>Łukasz Sereda</h3>
                     <h5>{% t 'cfo' %}</h5>
                 </div>
-                <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/wolek.jpg %}</span>
-                    <h3>Dominik Wołek</h3>
-                    <h5>{% t 'secretary' %}</h5>
-                </div>
             </div>
-            <hr/>
             <div class="row">
-                <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/kiermasz.jpg %}</span>
-                    <h3>Jakub Kiermasz</h3>
-                    <h5>{% t 'member-of-the-board' %}</h5>
-                </div>
                 <div class="col-6 col-12-medium">
                     <span class="image alt">{% picture halfpage images/about/mackowski.jpg %}</span>
                     <h3>Mateusz Maćkowski</h3>
+                    <h5>{% t 'member-of-the-board' %}</h5>
+                </div>
+                <div class="col-6 col-12-medium">
+                    <span class="image alt">{% picture halfpage images/about/zimoch.jpg %}</span>
+                    <h3>Elwira Zimoch</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
@@ -135,8 +121,9 @@ title: About KSI
                     <h2>{% t 'audit-committee' %}</h2>
                     <p>{% t 'audit-committee-about' %}</p>
                     <ul>
-                        <li>Dominika Zając</li>
-                        <li>Michał Herda</li>
+                        <li>Adam Piekarczyk</li>
+                        <li>Wojciech Sabała</li>
+                        <li>Jakub Kiermasz</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
@@ -175,7 +162,6 @@ title: About KSI
                     <h2>{% t 'housekeepers' %}</h2>
                     <p>{% t 'housekeepers-about' %}</p>
                     <ul>
-                        <li>Łukasz Sereda</li>
                         <li>Mateusz Gwóźdź</li>
                     </ul>
                 </div>
@@ -193,7 +179,7 @@ title: About KSI
                 <div class="col-6 col-12-medium">
                     <h2>{% t 'statute' %}</h2>
                     <p>{% t 'statute-about' %}</p>
-                    <a href="/files/statut2017.pdf" class="button icon solid fa-file-text">PDF</a>
+                    <a href="/files/statut2019.pdf" class="button icon solid fa-file-text">PDF</a>
                 </div>
             </div>
         </div>
