--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -161,7 +161,8 @@ title: About KSI
                     <h2>{% t 'housekeepers' %}</h2>
                     <p>{% t 'housekeepers-about' %}</p>
                     <ul>
-                        <li>Mateusz Gwóźdź</li>
+                        <li>Monika Mikuła</li>
+                        <li>Mateusz Olszewski</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
