--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -146,6 +146,7 @@ title: About KSI
                         <li>Adam Piekarczyk</li>
                         <li>Michał Piotrowski</li>
                         <li>Rafał Burczyński</li>
+                        <li>Katarzyna Płoskonka</li>
                     </ul>
                 </div>
             </div>
