Add Informator to projects

--- a/jekyll/projects/index.html
+++ b/jekyll/projects/index.html
@@ -36,6 +36,12 @@ subset: projects
                 <p>{% t 'erc-about' %}</p>
                 <a href="https://github.com/KSIUJ/ksi-erc" class="special">{% t 'read_more' %}</a>
             </article>
+            <article>
+                {% picture halfpage images/projects/informator.png --link https://github.com/KSIUJ/informator --parent class="image" %}
+                <h3 class="major">Informator</h3>
+                <p>{% t 'informator-about' %}</p>
+                <a href="https://github.com/KSIUJ/informator" class="special">{% t 'read_more' %}</a>
+            </article>
         </section>
     </div>
 </section>
