Update info about ERC.

--- a/jekyll/projects/index.html
+++ b/jekyll/projects/index.html
@@ -31,12 +31,6 @@ subset: projects
                 <a href="https://github.com/KSIUJ/mordor" class="special">{% t 'read_more' %}</a>
             </article>
             <article>
-                {% picture halfpage images/projects/erc.png --link https://github.com/KSIUJ/ksi-erc --parent class="image" %}
-                <h3 class="major">ERC</h3>
-                <p>{% t 'erc-about' %}</p>
-                <a href="https://github.com/KSIUJ/ksi-erc" class="special">{% t 'read_more' %}</a>
-            </article>
-            <article>
                 {% picture halfpage images/projects/informator.png --link https://github.com/KSIUJ/informator --parent class="image" %}
                 <h3 class="major">Informator</h3>
                 <p>{% t 'informator-about' %}</p>
@@ -50,6 +44,12 @@ subset: projects
         <h2 class="major">{% t 'stable' %}</h2>
         <p>{% t 'stable-about' %}</p>
         <section class="features">
+            <article>
+                {% picture halfpage images/projects/erc.png --link https://github.com/KSIUJ/erc-backend --parent class="image" %}
+                <h3 class="major">ERC</h3>
+                <p>{% t 'erc-about' %}</p>
+                <a href="https://github.com/KSIUJ/erc-backend" class="special">{% t 'read_more' %}</a>
+            </article>
             <article>
                 {% picture halfpage images/projects/gutenberg.png --link https://github.com/KSIUJ/gutenberg --parent class="image" %}
                 <h3 class="major">Gutenberg</h3>
