Update KSI History

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -230,6 +230,10 @@ title: About KSI
                                 class="func_header">{% t 'secretary' %}:</span>
                             {{ year.sekretarz }} {% endif %}
                         </div>
+                        <div class="zarzad_czlowiek">{% if year.czlonkowie != nil %}<span
+                                class="func_header">{% t 'board_members' %}:</span>
+                            {{ year.czlonkowie }} {% endif %}
+                        </div>
                         <div class="zarzad_czlowiek">{% if year.biblioteka != nil %}<span
                                 class="func_header">{% t 'librarians' %}:</span>
                             {{ year.biblioteka }} {% endif %}
