--- a/jekyll/events/index.html
+++ b/jekyll/events/index.html
@@ -73,12 +73,21 @@ subset: events
         </section>
     </div>
 </section>
-<section class="wrapper spotlight style3">
+<section class="wrapper spotlight style1 alt">
     <div class="inner">
         {% picture logo images/events/ksicamp.jpg --parent class="image alt" %}
         <div class="content">
             <h2 class="major">ksiCamp</h2>
             <p>{% t 'ksicamp' %}</p>
+        </div>
+    </div>
+</section>
+<section class="wrapper spotlight style3">
+    <div class="inner">
+        {% picture logo images/events/ksilearn.png --parent class="image alt" %}
+        <div class="content">
+            <h2 class="major">ksiLearn</h2>
+            <p>{% t 'ksilearn' %}</p>
         </div>
     </div>
 </section>
