--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -59,9 +59,9 @@ title: About KSI
             <div class="row">
                 <div class="col-3 col-12-medium"></div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/wolek.jpg %}</span>
+                    <span class="image alt">{% picture halfpage images/about/sereda.jpg %}</span>
                     <div class="align-left">
-                        <h3>Dominik Wołek</h3>
+                        <h3>Łukasz Sereda</h3>
                         <h5>{% t 'president' %}</h5>
                     </div>
                 </div>
@@ -70,25 +70,30 @@ title: About KSI
             <hr/>
             <div class="row">
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/pardyl.jpg %}</span>
-                    <h3>Adam Pardyl</h3>
+                    <span class="image alt">{% picture halfpage images/about/barczyk.jpg %}</span>
+                    <h3>Daniel Barczyk</h3>
                     <h5>{% t 'vp' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/sereda.jpg %}</span>
-                    <h3>Łukasz Sereda</h3>
+                    <span class="image alt">{% picture halfpage images/about/mackowski.jpg %}</span>
+                    <h3>Mateusz Maćkowski</h3>
                     <h5>{% t 'cfo' %}</h5>
                 </div>
             </div>
             <div class="row">
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/mackowski.jpg %}</span>
-                    <h3>Mateusz Maćkowski</h3>
+                    <span class="image alt">{% picture halfpage images/about/pardyl.jpg %}</span>
+                    <h3>Adam Pardyl</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/zimoch.jpg %}</span>
-                    <h3>Elwira Zimoch</h3>
+                    <span class="image alt">{% picture halfpage images/about/ploskonka.jpg %}</span>
+                    <h3>Katarzyna Płoskonka</h3>
+                    <h5>{% t 'member-of-the-board' %}</h5>
+                </div>
+                <div class="col-6 col-12-medium">
+                    <span class="image alt">{% picture halfpage images/about/przadka.jpg %}</span>
+                    <h3>Wiktor Prządka</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
@@ -121,9 +126,9 @@ title: About KSI
                     <h2>{% t 'audit-committee' %}</h2>
                     <p>{% t 'audit-committee-about' %}</p>
                     <ul>
-                        <li>Adam Piekarczyk</li>
                         <li>Wojciech Sabała</li>
-                        <li>Jakub Kiermasz</li>
+                        <li>Szymon Smykała</li>
+                        <li>Dominik Wołek</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
