--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -20,7 +20,7 @@ title: Home
 
     <section id="ksi" class="wrapper spotlight style3">
         <div class="inner">
-            {% picture logo images/base/logo-ksi.png --link /about/ --a class="image" %}
+            {% picture logo images/base/logo-ksi.png --link /{{ page.language }}/about/ --a class="image" %}
             <div class="content">
                 <h2 class="major">{% t 'section_ksi.title' %}</h2>
                 <p>{% t 'section_ksi.text' %}</p>
