--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -59,9 +59,9 @@ title: About KSI
             <div class="row">
                 <div class="col-3 col-12-medium"></div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/sereda.jpg %}</span>
+                    <span class="image alt">{% picture halfpage images/about/barczyk.jpg %}</span>
                     <div class="align-left">
-                        <h3>Łukasz Sereda</h3>
+                        <h3>Daniel Barczyk</h3>
                         <h5>{% t 'president' %}</h5>
                     </div>
                 </div>
@@ -70,30 +70,30 @@ title: About KSI
             <hr/>
             <div class="row">
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/barczyk.jpg %}</span>
-                    <h3>Daniel Barczyk</h3>
+                    <span class="image alt">{% picture halfpage images/about/przadka.jpg %}</span>
+                    <h3>Wiktor Prządka</h3>
                     <h5>{% t 'vp' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/mackowski.jpg %}</span>
-                    <h3>Mateusz Maćkowski</h3>
+                    <span class="image alt">{% picture halfpage images/about/rys.jpg %}</span>
+                    <h3>Paweł Ryś</h3>
                     <h5>{% t 'cfo' %}</h5>
                 </div>
             </div>
             <div class="row">
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/pardyl.jpg %}</span>
-                    <h3>Adam Pardyl</h3>
+                    <span class="image alt">{% picture halfpage images/about/gmerek.jpg %}</span>
+                    <h3>Paweł Gmerek</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/ploskonka.jpg %}</span>
-                    <h3>Katarzyna Płoskonka</h3>
+                    <span class="image alt">{% picture halfpage images/about/sygiet.jpg %}</span>
+                    <h3>Karol Sygiet</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/przadka.jpg %}</span>
-                    <h3>Wiktor Prządka</h3>
+                    <span class="image alt">{% picture halfpage images/about/szymeczko.jpg %}</span>
+                    <h3>Filip Szymeczko</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
@@ -126,9 +126,9 @@ title: About KSI
                     <h2>{% t 'audit-committee' %}</h2>
                     <p>{% t 'audit-committee-about' %}</p>
                     <ul>
-                        <li>Wojciech Sabała</li>
-                        <li>Szymon Smykała</li>
-                        <li>Dominik Wołek</li>
+                        <li>Mateusz Maćkowski</li>
+                        <li>Adam Pardyl</li>
+                        <li>Łukasz Sereda</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
@@ -146,12 +146,9 @@ title: About KSI
                     <h2>{% t 'admins' %}</h2>
                     <p>{% t 'admins-about' %}</p>
                     <ul>
-                        <li>Adam Pardyl</li>
                         <li>Mateusz Maćkowski</li>
-                        <li>Adam Piekarczyk</li>
-                        <li>Michał Piotrowski</li>
-                        <li>Rafał Burczyński</li>
-                        <li>Katarzyna Płoskonka</li>
+                        <li>Adam Pardyl</li>
+                        <li>Piotr Zieliński</li>
                     </ul>
                 </div>
             </div>
@@ -168,7 +165,6 @@ title: About KSI
                     <p>{% t 'housekeepers-about' %}</p>
                     <ul>
                         <li>Monika Mikuła</li>
-                        <li>Mateusz Olszewski</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
@@ -177,15 +173,25 @@ title: About KSI
     </div>
 </section>
 
-<section id="statute" class="wrapper spotlight style2">
+<section id="honorary" class="wrapper spotlight style2">
     <div class="inner">
         <div class="content align-left">
             <div class="row">
                 <div class="col-6 col-12-medium"></div>
                 <div class="col-6 col-12-medium">
-                    <h2>{% t 'statute' %}</h2>
-                    <p>{% t 'statute-about' %}</p>
-                    <a href="/files/statut2019.pdf" class="button icon solid fa-file-text">PDF</a>
+                    <h2>{% t 'honorary' %}</h2>
+                    <p>{% t 'honorary-about' %}</p>
+                    <ul>
+                        <li>Kamil Drobniak</li>
+                        <li>Michał Herda</li>
+                        <li>Piotr Maliszewski</li>
+                        <li>Adam Piekarczyk</li>
+                        <li>Wojciech Sabała</li>
+                        <li>Dorota Sadza</li>
+                        <li>Dominik Wołek</li>
+                        <li>Dominika Zając</li>
+                        <li>Adam Zydroń</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -264,6 +270,21 @@ title: About KSI
                     {% endfor %}
                 </div>
                 {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="statute" class="wrapper spotlight style1">
+    <div class="inner">
+        <div class="content align-left">
+            <div class="row">
+                <div class="col-6 col-12-medium"></div>
+                <div class="col-6 col-12-medium">
+                    <h2>{% t 'statute' %}</h2>
+                    <p>{% t 'statute-about' %}</p>
+                    <a href="/files/statut2019.pdf" class="button icon solid fa-file-text">PDF</a>
+                </div>
             </div>
         </div>
     </div>
