--- a/jekyll/index.html
+++ b/jekyll/index.html
@@ -61,7 +61,7 @@ title: Home
                     {% if post.post_img_url != "" %}
                         {% picture halfpage {{ post.post_img_url }} --link {{ post.url }} --a class="image" %}
                     {% endif; %}
-                    <h3 class="major">{{ post.date | date: "%Y-%m-%d" }} {{ post.title }}</h3>
+                    <h3 class="major">{{ post.date | date: "%Y-%m-%d" }} - {{ post.title }}</h3>
                     {{ post.excerpt }}
                     <a href="{{ post.url }}" class="special">{% t 'read_more' %}</a>
                 </article>
