feat: about page update

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -56,44 +56,44 @@ title: About KSI
         <div class="content">
             <h2>{% t 'board' %}</h2>
             <p>{% t 'board-about' %}</p>
-            <div class="row">
+            <div class="row align-center">
                 <div class="col-3 col-12-medium"></div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/barczyk.jpg %}</span>
-                    <div class="align-left">
-                        <h3>Daniel Barczyk</h3>
-                        <h5>{% t 'president' %}</h5>
-                    </div>
+                    <span class="image image-about">{% picture halfpage images/about/szymeczko.jpg %}</span>
+                    <h3>Filip Szymeczko</h3>
+                    <h5>{% t 'president' %}</h5>
                 </div>
                 <div class="col-3 col-12-medium"></div>
             </div>
-            <hr/>
-            <div class="row">
+            <div class="row align-center">
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/przadka.jpg %}</span>
-                    <h3>Wiktor Prządka</h3>
+                    <span class="image image-about">{% picture halfpage images/about/duda.jpg %}</span>
+                    <h3>Dominika Duda</h3>
                     <h5>{% t 'vp' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/rys.jpg %}</span>
+                    <span class="image image-about">{% picture halfpage images/about/rys.jpg %}</span>
                     <h3>Paweł Ryś</h3>
                     <h5>{% t 'cfo' %}</h5>
                 </div>
             </div>
-            <div class="row">
+            <br/>
+            <div class="row align-center">
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/gmerek.jpg %}</span>
-                    <h3>Paweł Gmerek</h3>
+                    <span class="image image-about">{% picture halfpage images/about/brachmanska.jpg %}</span>
+                    <h3>Agata Brachmańska</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/sygiet.jpg %}</span>
-                    <h3>Karol Sygiet</h3>
+                    <span class="image image-about">{% picture halfpage images/about/miskowicz.png %}</span>
+                    <h3>Tomasz Miśkowicz</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
-                <div class="col-6 col-12-medium">
-                    <span class="image alt">{% picture halfpage images/about/szymeczko.jpg %}</span>
-                    <h3>Filip Szymeczko</h3>
+            </div>
+            <div class="row align-center">
+                <div class="col-12 col-12-medium">
+                    <span class="image image-about">{% picture halfpage images/about/stachura.png %}</span>
+                    <h3>Franciszek Stachura</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
@@ -126,9 +126,9 @@ title: About KSI
                     <h2>{% t 'audit-committee' %}</h2>
                     <p>{% t 'audit-committee-about' %}</p>
                     <ul>
-                        <li>Mateusz Maćkowski</li>
-                        <li>Adam Pardyl</li>
-                        <li>Łukasz Sereda</li>
+                        <li>Daniel Barczyk</li>
+                        <li>Tomasz Dądela</li>
+                        <li>Mikołaj Janusz</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
@@ -146,8 +146,8 @@ title: About KSI
                     <h2>{% t 'admins' %}</h2>
                     <p>{% t 'admins-about' %}</p>
                     <ul>
-                        <li>Mateusz Maćkowski</li>
-                        <li>Adam Pardyl</li>
+                        <li>Ignacy Alwasiak</li>
+                        <li>Mikołaj Janusz</li>
                         <li>Piotr Zieliński</li>
                     </ul>
                 </div>
@@ -165,6 +165,7 @@ title: About KSI
                     <p>{% t 'housekeepers-about' %}</p>
                     <ul>
                         <li>Monika Mikuła</li>
+                        <li>Jakub Parapura</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
