Update Scientific Supervisor

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -109,7 +109,7 @@ title: About KSI
                 <div class="col-6 col-12-medium">
                     <h2>{% t 'supervisor' %}</h2>
                     <ul>
-                        <li>prof. dr hab. inż. Marek Skomorowski</li>
+                        <li>dr hab. Adam Roman prof. UJ</li>
                     </ul>
                     <p>{% t 'supervisor-about' %}</p>
                 </div>
