Add new honorary members

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -183,6 +183,10 @@ title: About KSI
                     <h2>{% t 'honorary' %}</h2>
                     <p>{% t 'honorary-about' %}</p>
                     <ul>
+                        <li>Filip Szymeczko</li>
+                        <li>Paweł Ryś</li>
+                        <li>Mateusz Maćkowski</li>
+                        <li>Adam Pardyl</li>
                         <li>Kamil Drobniak</li>
                         <li>Michał Herda</li>
                         <li>Piotr Maliszewski</li>
