Update members of the board

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -59,22 +59,24 @@ title: About KSI
             <div class="row align-center">
                 <div class="col-3 col-12-medium"></div>
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/szymeczko.jpg %}</span>
-                    <h3>Filip Szymeczko</h3>
+                    <span class="image image-about">{% picture halfpage images/about/stachura.jpg %}</span>
+                    <h3>Franciszek Stachura</h3>
                     <h5>{% t 'president' %}</h5>
                 </div>
                 <div class="col-3 col-12-medium"></div>
             </div>
             <div class="row align-center">
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/duda.jpg %}</span>
-                    <h3>Dominika Duda</h3>
-                    <h5>{% t 'vp' %}</h5>
+                    <span class="image image-about">{% picture halfpage images/about/rogalski.jpg %}</span>
+                    <h3>Patryk Rogalski</h3>
+                    <!--<h5>{% t 'vp' %}</h5>-->
+                    <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/rys.jpg %}</span>
-                    <h3>Paweł Ryś</h3>
-                    <h5>{% t 'cfo' %}</h5>
+                    <span class="image image-about">{% picture halfpage images/about/baran.jpg %}</span>
+                    <h3>Konrad Baran</h3>
+                    <!--<h5>{% t 'cfo' %}</h5>-->
+                    <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
             <br/>
@@ -85,15 +87,15 @@ title: About KSI
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/miskowicz.png %}</span>
-                    <h3>Tomasz Miśkowicz</h3>
+                    <span class="image image-about">{% picture halfpage images/about/berestka.jpg %}</span>
+                    <h3>Piotr Berestka</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
             <div class="row align-center">
                 <div class="col-12 col-12-medium">
-                    <span class="image image-about">{% picture halfpage images/about/stachura.png %}</span>
-                    <h3>Franciszek Stachura</h3>
+                    <span class="image image-about">{% picture halfpage images/about/dadela.jpg %}</span>
+                    <h3>Tomasz Dądela</h3>
                     <h5>{% t 'member-of-the-board' %}</h5>
                 </div>
             </div>
@@ -126,9 +128,9 @@ title: About KSI
                     <h2>{% t 'audit-committee' %}</h2>
                     <p>{% t 'audit-committee-about' %}</p>
                     <ul>
-                        <li>Daniel Barczyk</li>
-                        <li>Tomasz Dądela</li>
-                        <li>Mikołaj Janusz</li>
+                        <li>Filip Szymeczko</li>
+                        <li>Dominika Duda</li>
+                        <li>Jakub Parapura</li>
                     </ul>
                 </div>
                 <div class="col-6 col-12-medium"></div>
