Update info about CFO and vicepresident

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -69,14 +69,12 @@ title: About KSI
                 <div class="col-6 col-12-medium">
                     <span class="image image-about">{% picture halfpage images/about/rogalski.jpg %}</span>
                     <h3>Patryk Rogalski</h3>
-                    <!--<h5>{% t 'vp' %}</h5>-->
-                    <h5>{% t 'member-of-the-board' %}</h5>
+                    <h5>{% t 'vp' %}</h5>
                 </div>
                 <div class="col-6 col-12-medium">
                     <span class="image image-about">{% picture halfpage images/about/baran.jpg %}</span>
                     <h3>Konrad Baran</h3>
-                    <!--<h5>{% t 'cfo' %}</h5>-->
-                    <h5>{% t 'member-of-the-board' %}</h5>
+                    <h5>{% t 'cfo' %}</h5>
                 </div>
             </div>
             <br/>
