Update honorary members info

--- a/jekyll/about/index.html
+++ b/jekyll/about/index.html
@@ -196,6 +196,7 @@ title: About KSI
                         <li>Dominik Wołek</li>
                         <li>Dominika Zając</li>
                         <li>Adam Zydroń</li>
+                        <li>prof. dr hab. inż. Marek Skomorowski</li>
                     </ul>
                 </div>
             </div>
